test/types/records/ferguson/default-compare-mixed-insn.3.good
default-compare-mixed-insn.chpl:8: In function 'main':
default-compare-mixed-insn.chpl:19: error: Cannot assign to R(int(64)) from R(int(32))
